Fix title width on each post to avoid overlapping with date

--- a/source/stylesheets/modules/_article.css.scss
+++ b/source/stylesheets/modules/_article.css.scss
@@ -2,6 +2,7 @@
 
 .post {
   & > h1 {
+    width: 80%;
     margin-bottom: 0;
     text-align: left;
   }
